[package]
name = "switch-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rmp = "0.8.10"
log = "0.4.14"
anyhow = "1.0.53"
owo-colors = "3.2.0"
parking_lot = "0.12.0"
thiserror = "1.0.30"
byteorder = "1.4.3"